# glife-cpp

./: author.md
documentation/: life_header.md  manager_header.md  reader_header.md
src/: CMakeLists.txt  glife.ini  life.cpp  life.h  main.cpp  manager.cpp  manager.h  reader.cpp  reader.h
src/ext_lib/: canvas.cpp  canvas.h
